# paperline

./: .gitignore  .markdownlint.json  CHANGELOG.md  HOW-TO-USE.md  INDEX.md  LICENSE  README.md  SCHEMA.md  SECURITY.md  bootstrap.ps1  bootstrap.sh  pyproject.toml  requirements.txt  run_pipeline.ps1  run_pipeline.sh
.github/workflows/: ci.yml
.obsidian/: app.json
correspondence/: README.md
documents/: README.md
drafts-quarantine/: README.md
examples/: README.md
examples/compliance-records/: README.md  project-config.json
examples/compliance-records/correspondence/2026-02-15/m001/: manifest.json  transcript.md
examples/compliance-records/documents/: data-policy-v1.pdf.md  data-policy-v2.pdf.md
examples/example-message-folder/: manifest.json
examples/example-message-folder/attachments/: proposal.pointer.md
examples/journalism-investigation/: README.md  project-config.json
examples/journalism-investigation/contacts/: source-alpha.md  vendor-x-source.md
examples/journalism-investigation/correspondence/: _combined.mbox
examples/journalism-investigation/correspondence/2026-01-15/m001/: manifest.json  transcript.md
examples/journalism-investigation/correspondence/2026-02-03/m002/: manifest.json  transcript.md
examples/journalism-investigation/correspondence/2026-03-12/m003/: manifest.json  transcript.md
examples/journalism-investigation/documents/: halverton-2025-budget-v1.pdf.md  halverton-2025-budget-v2.pdf.md
filings/: README.md
journal/: README.md
memos/: README.md
paperline_ui/: README.md  __init__.py  __main__.py  app.py
paperline_ui/templates/: base.html  config.html  home.html  report.html  scope_test.html
reference/: README.md
reports/: README.md
system/: design.md  journal-config.json  journal-schema.sql  project-config.json  reference-config.json  reference-schema.sql  schema.sql
system/tools/: README.md  add_letter.py  build_corpus.py  build_journal.py  build_reference.py  build_threads.py  capture_recent_targeted.py  classify_scope.py  config_loader.py  diff_contracts.py  extract_contract.py  ingest_reference.py  journal.py  lib_provenance.py  query_corpus.py  query_reference.py  render_current_state.py  render_obsidian.py  restructure_attachments.py  scan_annotations.py  seed_parties.py  verify_corpus.py  verify_reference.py
system/tools/providers/: __init__.py  gmail_imap.py  local_mbox.py  yahoo_browser.py
tests/: conftest.py  test_capture_guard.py  test_dashboard_stats.py  test_gmail_imap_query.py  test_lib_provenance.py  test_local_mbox.py  test_scope_classifier.py
tests/fixtures/local_mbox/: multi.mbox  single.mbox  with_malformed.mbox
tests/fixtures/local_mbox/eml_dir/: msg_one.eml  msg_two.eml
