[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "paperline"
version = "0.2.0"
description = "Self-contained kit for organizing email correspondence, document version chains, and contact relationships into a hash-verified, searchable repository."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Paperline contributors" }]
keywords = [
    "correspondence", "documents", "audit-log", "email", "imap", "obsidian",
    "sqlite", "fts5", "records", "version-control",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "pymupdf>=1.24,<2.0",
    "pdf2image>=1.17,<2.0",
    "pytesseract>=0.3.10,<1.0",
    "sqlite-utils>=3.36,<4.0",
    "python-dateutil>=2.9,<3.0",
    "beautifulsoup4>=4.12,<5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "ruff>=0.6,<1.0",
    "mypy>=1.10,<2.0",
]
datasette = ["datasette>=0.65,<1.0"]
yahoo = ["playwright>=1.45,<2.0"]
ui = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "jinja2>=3.1,<4.0",
    "python-multipart>=0.0.9,<1.0",
]

[project.urls]
Homepage = "https://github.com/ARC-907/paperline"

[tool.setuptools]
# Paperline is operated as a standalone repo (run scripts under system/tools/),
# not installed as an importable package. Disable package discovery.
packages = []

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [
    ".venv", "venv", "__pycache__",
    "correspondence", "documents", "memos", "filings",
    "reports", "drafts-quarantine",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade (modern syntax)
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line length: warn-not-error in this project
    "B008",   # function call in default arg (used in dataclasses + click)
    "RUF012", # mutable class default (we use ClassVar elsewhere when it matters)
]

[tool.mypy]
python_version = "3.12"
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
exclude = [
    "^\\.venv/",
    "^correspondence/", "^documents/", "^memos/",
    "^filings/", "^reports/",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--strict-config"]
filterwarnings = ["error"]
